# Adaptive-AI-Scheduler

./: Data Collection.ipynb  README.md  app.py  main.py  prometheus.yml  pyproject.toml
.ipynb_checkpoints/: Data Collection-checkpoint.ipynb
deployment/: Dockerfile  docker-compose.yml
notebooks/.ipynb_checkpoints/: Data Collection-checkpoint.ipynb
scheduler/: models.py  optimizer.py  prophet_model.py  scheduler.py
src/: app.py  requirements.txt
src/scheduler/: optimizer.py
