[project]
name = "adaptive-ai-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.2.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
]
